--- a/dosirak/src/main/webapp/resources/css/keyword.css
+++ b/dosirak/src/main/webapp/resources/css/keyword.css
@@ -6,6 +6,7 @@
 .keyword-wrap {max-width: 940px; margin: 0 auto;}
 
 /* 키워드 리스트 */
+#keyword-list a {width: 100%;}
 .list-wrap {overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px;}
 .contents-wrap .list-title {font-size: 20px; text-align: left; letter-spacing: -1px;}
 .contents-wrap {display: flex; flex-wrap: wrap; align-items: center; margin-top: 6px; justify-content: space-between;}
