--- a/dosirak/src/main/webapp/resources/css/search.css
+++ b/dosirak/src/main/webapp/resources/css/search.css
@@ -2,11 +2,23 @@
 
 /* search form */
 .search-write-wrap {max-width: 940px; margin: 0 auto; overflow: hidden}
+.search-btn{
+    display: inline-block;
+    height: 22px;
+    margin-left:16px;
+    margin-right: 0;
+    margin-top: 0;
+    width: 22px;
+    background:url('../images/header_icon.png');
+    background-position: -30px 0;
+    cursor:pointer;
+}
 
 /* 검색 리스트 */
-.search-result-wrap {max-width: 940px; margin: 0 auto;}
+#div-result{overflow: left; border-bottom: 1px solid #eee; padding: 20px 20px; margin: 0 auto;}
+.search-result-wrap {max-width: 940px; margin: 0 auto; color: #959595; font-size: 13px;}
 #search-result-list a {width: 100%;}
-.list-wrap {overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px;}
+.list-wrap{overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px;}
 .contents-wrap .list-title {font-size: 20px; text-align: left; letter-spacing: -1px;}
 .contents-wrap {display: flex; flex-wrap: nowrap; align-items: center;  margin-top: 6px; justify-content: space-between;}
 .contents-wrap .list-item p img {display: none;}
@@ -16,6 +28,3 @@
 
 /* 검색 글씨색 바꾸기 */
 .highlight {color: #00c6be;}
-
-
-
