--- a/dosirak/src/main/webapp/resources/css/mypage.css
+++ b/dosirak/src/main/webapp/resources/css/mypage.css
@@ -24,9 +24,11 @@
 .list-wrap {overflow: hidden; border-bottom: 1px solid #eee; padding: 20px 0;}
 .list-title {font-size: 18px; color: #333; margin-bottom: 10px;}
 .list-title:hover { color: #3e3e3e; text-decoration: underline; }
-.list-content {font-size: 14px; color: #666; line-height: 1.5; margin-bottom: 10px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
+.list-content {font-size: 14px; color: #666; line-height: 1.5; font-weight: normal; margin-bottom: 10px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .list-thumbnail {float: right; width: 120px; height: 120px; margin-left: 20px;} 
-.list-info {color: #999; font-size: 12px; margin-top: 5px;} 
+.list-info {color: #999; font-size: 12px; padding-top: 20px;} 
 .num-comment {margin-right: 5px;}
 .ico-dot {margin: 0 5px;}
 .publish-time {color: #999;}
+
+
