--- a/dosirak/src/main/webapp/resources/css/header.css
+++ b/dosirak/src/main/webapp/resources/css/header.css
@@ -16,7 +16,8 @@
     
 .header-wrap .right{display:flex;align-items: center;}
 .header-wrap .login-btn{}
-.header-wrap .login-btn a{display:inline-block;width:100%;height:100%;padding:0 10px;height:28px;line-height:28px;text-align:center;border:1px solid #959595;border-radius: 16px;}
+.header-wrap .login-btn a{display:inline-block;width:100%;height:100%;padding:0 10px;height:28px;line-height:28px;text-align:center;border:1px solid #959595;border-radius: 16px;
+font-size: 12px;font-weight:300;color: #666;}
 .header-wrap .search-btn{display: inline-block;height: 22px;margin-left:16px;margin-right: 0;margin-top: 3px;width: 22px;background:url('../images/header_icon.png');background-position: -30px 0;cursor:pointer;}
 
 
@@ -40,9 +41,9 @@ background-color: #fff;border: 1px solid #00c6be;border-radius: 16px;color: #00c
 
 /*로그인 된경우*/
 .nav-profile-login{height:239px;}
-.profile-default .profile-login-image{display: block;width: 60px;height: 60px;margin:0 auto;border-radius: 60px;overflow:hidden;}
-.profile-default .profile-name{margin-top:12px;}
-.profile-default .profile-id{font-size:12px;margin-top:6.5px}
+.profile-default .profile-login-image{display: block;width: 60px;height: 60px;margin:0 auto;border-radius: 60px;overflow:hidden;cursor:pointer;}
+.profile-default .profile-name{margin-top:12px;cursor:pointer;}
+.profile-default .profile-id{font-size:12px;margin-top:6.5px;cursor:pointer;}
 
 .profile-default .profile-top{display:flex;gap:4px;}
 .nav-btn a{display:inline-block;width: 80px;height: 32px;line-height:32px;margin-top: 18px;
