--- a/dosirak/src/main/webapp/resources/css/search.css
+++ b/dosirak/src/main/webapp/resources/css/search.css
@@ -13,18 +13,27 @@
     background-position: -30px 0;
     cursor:pointer;
 }
+#query{
+  width: 600px;
+}
+.search-type{
+  margin-right: 30px;
+}
+
 
 /* 검색 리스트 */
+#none-result{font-size: 20px};
 #div-result{overflow: left; border-bottom: 1px solid #eee; padding: 20px 20px; margin: 0 auto;}
 .search-result-wrap {max-width: 940px; margin: 0 auto; color: #959595; font-size: 13px;}
 #search-result-list a {width: 100%;}
-.list-wrap{overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px;}
+.list-wrap {overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px;}
 .contents-wrap .list-title {font-size: 20px; text-align: left; letter-spacing: -1px;}
-.contents-wrap {display: flex; flex-wrap: nowrap; align-items: center;  margin-top: 6px; justify-content: space-between;}
+.contents-wrap {display: flex; flex-wrap: nowrap; align-items: center;  margin-top: 6px; justify-content: space-between; text-align: left;}
+.contents-wrap .list-item:nth-child(1) {margin-right: 15px;}
 .contents-wrap .list-item p img {display: none;}
-.contents-wrap .list-item .list-content {max-height: 45px; text-align: left; color: #666; font-size: 14px; line-height: 21px;}
+.contents-wrap .list-item .list-content {overflow: hidden; max-height: 45px; text-align: left; color: #666; font-size: 14px; line-height: 21px;}
+.contents-wrap .list-item .list-content p {height: 44px; line-height: 20px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .list-thumbnail {width:120px; height: 120px; overflow: hidden;}
 .list-info span {color: #959595; font-size: 12px; padding-top: 20px; margin-right: 10px;}
-
 /* 검색 글씨색 바꾸기 */
 .highlight {color: #00c6be;}
