--- a/dosirak/src/main/webapp/resources/css/keyword.css
+++ b/dosirak/src/main/webapp/resources/css/keyword.css
@@ -12,8 +12,7 @@
 .contents-wrap {display: flex; flex-wrap: nowrap; align-items: center;  margin-top: 6px; justify-content: space-between; text-align: left;}
 .contents-wrap .list-item:nth-child(1) {margin-right: 15px;}
 .contents-wrap .list-item p img {display: none;}
-.contents-wrap .list-item .list-content {overflow: hidden; max-height: 45px; text-align: left; color: #666; font-size: 14px; line-height: 21px;}
-.contents-wrap .list-item .list-content {height: 44px; line-height: 20px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
+.contents-wrap .list-item .list-content {overflow: hidden; max-height: 45px; text-align: left; color: #666; font-size: 14px; line-height: 21px; height: 44px; line-height: 20px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 /* .contents-wrap .list-item .list-content * {font-size: 15px!important; font-weight: 400!important; color: #333!important;} */
 .list-thumbnail {width:120px; height: 120px; overflow: hidden;}
 .list-info span {color: #959595; font-size: 12px; padding-top: 20px; margin-right: 10px;}
