--- a/dosirak/src/main/webapp/resources/css/main.css
+++ b/dosirak/src/main/webapp/resources/css/main.css
@@ -15,12 +15,15 @@
 .main-slide .list-thumbnail {width: 400px; min-height: 520px; background-size: cover!important;}
 .main-slide .text-wrap {color: #fff; position: relative; bottom: 150px; padding: 0 10px; overflow: hidden; z-index: 5;}
 .main-slide .text-wrap .slide-title {font-size: 30px;}
-.main-slide .text-wrap .slide-contents {margin: 5px 0; max-height: 50px; overflow: hidden;}
+.main-slide .text-wrap .slide-contents {margin: 5px 0; max-height: 50px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .main-slide .text-wrap .slide-contents p {color: #fff!important;}
 .main-slide .text-wrap img {display: none;}
 .main-slide .text-wrap .slide-by {margin-right: 5px;}
 
 .mask {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #111; opacity: .38;}
+
+/* 메인 슬라이드 데이터 없을 때 */
+.no-data {padding: 53px 0; font-size: 19px; text-align: center; font-style: italic; font-weight: 500; color: #333333;}
 
 /* main-slide dots-custom */
 .bn-controller {text-align: center; z-index: 99; position: relative; margin-top: 20px;}
