--- a/dosirak/src/main/webapp/resources/css/search.css
+++ b/dosirak/src/main/webapp/resources/css/search.css
@@ -14,7 +14,7 @@
     cursor:pointer;
 }
 #query{
-  width: 600px;
+  width: 780px;
 }
 .search-type{
   margin-right: 30px;
@@ -23,7 +23,7 @@
 
 /* 검색 리스트 */
 #none-result{font-size: 20px};
-#div-result{overflow: left; border-bottom: 1px solid #eee; padding: 20px 20px; margin: 0 auto;}
+#div-result{overflow: left; border-bottom: 1px solid #eee; padding: 20px; margin: 0 auto;}
 .search-result-wrap {max-width: 940px; margin: 0 auto; color: #959595; font-size: 13px;}
 #search-result-list a {width: 100%;}
 .list-wrap {overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px;}
