KFIM-47 모빈 상세보기 찐최종

--- a/dosirak/src/main/webapp/resources/css/detail.css
+++ b/dosirak/src/main/webapp/resources/css/detail.css
@@ -11,7 +11,7 @@ hr{visibility:visible; }
 .blog-detail-writer {max-width: 960px; letter-spacing: -.05em; text-align: center;  }
 .blog-detail-writer a {color: #000000; font-size: 12px; font-family:'Noto Sans KR','Malgun Gothic', sans-serif; !important; }
 
-.container2{    height: 200px; background-color: #FBFBFB; display: flex; justify-content: center; bottom: 0;}  
+.container2{    height: 200px; background-color: #FBFBFB; display: flex; justify-content: center; bottom: 0;  width: 100%;}  
 .comment-btn {float: right;}
 
 .utils-wrap {border-top: 1px solid #eee;padding: 32px 0;}
@@ -143,18 +143,40 @@ hr{visibility:visible; }
  
  #btn-edit-blog{
        background-color: white;
-  width: 25px;
-      height: 25px;
-     background-image: url(../images/header_icon.png);
-      
-      background-position:2px -147px
+       width: 25px;
+       height: 25px;
+       background-image: url(../images/header_icon.png);
+       background-position:2px -147px
  }
  
  #btn-remove-blog{
-       background-color: white;
- width: 25px;
+      background-color: white;
+      width: 25px;
       height: 25px;
-           background-image: url(../images/header_icon.png);
+      background-image: url(../images/header_icon.png);
       background-position:-57px -147px
  }
+ 
+ .btn-register-reply{
+ background-color: white;
+ border: 1px solid #bbb;
+    border-radius: 32px;
+    color: #666;
+    font-size: 12px;
+    height: 32px;
+    line-height: 28px;
+    width: 52px;
+}
+ 
+ 
+#btn-comment-register{
+   background-color: white;
+ border: 1px solid #bbb;
+    border-radius: 32px;
+    color: #666;
+    font-size: 12px;
+    height: 32px;
+    line-height: 28px;
+    width: 52px;
+}
     
