--- a/dosirak/src/main/webapp/resources/css/write.css
+++ b/dosirak/src/main/webapp/resources/css/write.css
@@ -5,7 +5,7 @@
     margin: 10px auto;
     width: 700px;
     font-size: 15px;
-    color: #666; border: 0; font-size: inherit; font-family: inherit; font-size: inherit; resize: none; font-weight: 400;
+    color: #666; border: 0; font-size: inherit; font-family: inherit; resize: none; font-weight: 400;
   }
   .summernote{
     margin: 0 auto;
@@ -19,7 +19,7 @@
     -o-appearance: none; 
     appearance: none;
     border: none;
-    color: #666; border: 0; font-size: inherit; font-family: inherit; font-size: inherit; resize: none; font-weight: 400;
+    color: #666; border: 0; font-size: 20px; font-family: inherit; font-weight: 400;
   }
   select:focus {outline: none;}
   .keyword option{
@@ -31,7 +31,7 @@
   #title{
     width: 650px;
     border: none;
-    color: #666; border: 0; font-size: inherit; font-family: inherit; font-size: inherit; resize: none; font-weight: 400;
+    color: #666; border: 0;  font-family: inherit; font-size: 20px; font-weight: 400;
   }
   .editor#btn-wrap{
      justify-contents: center;
