--- a/dosirak/src/main/webapp/resources/css/keyword.css
+++ b/dosirak/src/main/webapp/resources/css/keyword.css
@@ -9,6 +9,7 @@
 #keyword-list a {width: 100%;}
 .list-wrap {border-bottom: 1px solid #eee; padding: 30px 20px;}
 .contents-wrap .list-title {font-size: 20px; text-align: left; letter-spacing: -1px;}
+.contents-wrap .list-title:hover { color: #666; text-decoration: underline; }
 .contents-wrap {display: flex; flex-wrap: nowrap; align-items: center;  margin-top: 6px; justify-content: space-between; text-align: left;}
 .contents-wrap .list-item:nth-child(1) {margin-right: 15px; max-width: 750px;}
 .contents-wrap .list-item p img {display: none;}
