--- a/dosirak/src/main/webapp/resources/css/mypage.css
+++ b/dosirak/src/main/webapp/resources/css/mypage.css
@@ -25,11 +25,11 @@
 #blog-list a {width: 100%;}
 .list-wrap {overflow: left; border-bottom: 1px solid #eee; padding: 30px 20px; cursor:pointer;}
 .list-title:hover { color: #666; text-decoration: underline; }
-.contents-wrap .list-title {font-size: 20px; text-align: left; letter-spacing: -1px;}
+.contents-wrap .list-title {font-size: 20px; text-align: left; letter-spacing: -1px; display:inline-block;}
 .contents-wrap {display: flex; flex-wrap: nowrap; align-items: center;  margin-top: 6px; justify-content: space-between; text-align: left;}
 .contents-wrap .list-item:nth-child(1) {margin-right: 15px;}
 .contents-wrap .list-item p img {display: none;}
-.contents-wrap .list-item .list-content {overflow: hidden; max-height: 45px; text-align: left; color: #666; font-size: 14px; line-height: 21px; height: 44px; line-height: 20px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
+.contents-wrap .list-item .list-content {overflow: hidden; max-height: 45px; text-align: left; color: #666; font-size: 14px; height: 44px; line-height: 20px; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .list-item {width: 100%;}
 .list-thumbnail {float: right; margin-left: 20px;}
 .list-thumbnail img {width: 120px; height: 120px; object-fit: cover;} 
